fix z-index

--- a/components/fade/style.styl
+++ b/components/fade/style.styl
@@ -13,7 +13,7 @@
 :global
   .cSSTransitionGroup
     .markup:not(:first-child)
-      background: yellow
+      // background: yellow
       z-index: -2
       display: none
       // background: blue
